[project]
name = "mas-temp"
version = "0.1.0"
description = "Multi-agent research tool using LangChain and FastAPI"
authors = [
    { name="sree-sphere", email="sreeprad99@gmail.com" },
]
readme = "README.md"
license = { file = "LICENSE", text = "MIT"}
requires-python = ">=3.9"

dependencies = [
    "aiohttp==3.12.0",
    "duckduckgo_search==8.0.4",
    "fastapi==0.115.5",
    "langchain-anthropic==0.3.15",
    "langchain-community>=0.3.5",
    "langchain-core>=0.3.66",
    "langchain-openai==0.2.12",
    "pydantic==2.10.6",
    "python-dotenv==1.1.0",
    "typing_extensions==4.12.2",
    "uvicorn==0.34.3",
    "langchain>=0.3.0",
    "langgraph>=0.4.0",
    "duckduckgo-search==8.0.4",
    "langchain-community>=0.3.5",
    "langchain-core>=0.3.66",
    "typing-extensions==4.12.2",
]

[tool.setuptools.packages.find]
where = ["src"]


[tool.pdm]
distribution = true
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
