[project]
name = "mas-temp"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sree-sphere", email = "sreeprad99@gmail.com"},
]
dependencies = [
    "aiohttp==3.12.0",
    "duckduckgo-search==8.0.4",
    "fastapi==0.115.5",
    "langchain-anthropic==0.3.15",
    "langchain-community>=0.3.5",
    "langchain-core>=0.3.66",
    "langchain-openai==0.2.12",
    "pydantic==2.10.6",
    "python-dotenv==1.1.0",
    "typing-extensions==4.12.2",
    "uvicorn==0.34.3",
    "langchain>=0.3.0",
    "langgraph>=0.4.0",
    "wikipedia==1.4.0",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
